fix: use hyphenated naming for x-grid-grid-relationship type
- Updated J2 template to use 'x-grid-grid-relationship' instead of 'x-grid-gridrelationship'
- Regenerated Python code with consistent hyphenated naming
- Updated test to expect hyphenated version
- All 106 tests passing

This ensures consistency with STIX 2.1 naming conventions where custom
object types use hyphenated names (e.g., x-grid-photovoltaic-system).

--- a/src/generator/templates/class.j2
+++ b/src/generator/templates/class.j2
@@ -39,7 +39,7 @@ class {{ class_def.name }}({{ class_def.bases | join(', ') }}):
     """
     
     # STIX type identifier for this Grid-STIX object
-    _type = 'x-grid-{{ class_def.owl_fragment if class_def.owl_fragment else class_def.name.lower().replace("_", "-") }}'
+    _type = 'x-grid-{{ (class_def.owl_fragment if class_def.owl_fragment else class_def.name.lower()).replace("_", "-") }}'
     
     # STIX properties definition following official STIX patterns
     _properties = OrderedDict([
